
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_25__ TYPE_7__ ;
typedef struct TYPE_24__ TYPE_6__ ;
typedef struct TYPE_23__ TYPE_5__ ;
typedef struct TYPE_22__ TYPE_4__ ;
typedef struct TYPE_21__ TYPE_3__ ;
typedef struct TYPE_20__ TYPE_2__ ;
typedef struct TYPE_19__ TYPE_1__ ;
typedef struct TYPE_18__ TYPE_17__ ;


typedef int uint64_t ;
typedef int uint32_t ;
typedef size_t ngx_uint_t ;
struct TYPE_20__ {char* data; int len; } ;
typedef TYPE_2__ ngx_str_t ;
struct TYPE_21__ {uintptr_t data; int get_handler; } ;
typedef TYPE_3__ ngx_http_variable_t ;
struct TYPE_22__ {int percent; } ;
typedef TYPE_4__ ngx_http_split_clients_part_t ;
struct TYPE_18__ {size_t nelts; TYPE_4__* elts; } ;
struct TYPE_23__ {TYPE_17__ parts; int value; } ;
typedef TYPE_5__ ngx_http_split_clients_ctx_t ;
struct TYPE_24__ {int * complex_value; TYPE_2__* value; TYPE_7__* cf; } ;
typedef TYPE_6__ ngx_http_compile_complex_value_t ;
struct TYPE_25__ {void* handler_conf; int handler; TYPE_5__* ctx; int pool; TYPE_1__* args; } ;
typedef TYPE_7__ ngx_conf_t ;
typedef int ngx_command_t ;
struct TYPE_19__ {TYPE_2__* elts; } ;


 char* NGX_CONF_ERROR ;
 char* NGX_CONF_OK ;
 int NGX_HTTP_VAR_CHANGEABLE ;
 int NGX_LOG_EMERG ;
 scalar_t__ NGX_OK ;
 scalar_t__ ngx_array_init (TYPE_17__*,int ,int,int) ;
 int ngx_conf_log_error (int ,TYPE_7__*,int ,char*,...) ;
 char* ngx_conf_parse (TYPE_7__*,int *) ;
 TYPE_3__* ngx_http_add_variable (TYPE_7__*,TYPE_2__*,int ) ;
 scalar_t__ ngx_http_compile_complex_value (TYPE_6__*) ;
 int ngx_http_split_clients ;
 int ngx_http_split_clients_variable ;
 int ngx_memzero (TYPE_6__*,int) ;
 TYPE_5__* ngx_pcalloc (int ,int) ;

__attribute__((used)) static char *
ngx_conf_split_clients_block(ngx_conf_t *cf, ngx_command_t *cmd, void *conf)
{
    char *rv;
    uint32_t sum, last;
    ngx_str_t *value, name;
    ngx_uint_t i;
    ngx_conf_t save;
    ngx_http_variable_t *var;
    ngx_http_split_clients_ctx_t *ctx;
    ngx_http_split_clients_part_t *part;
    ngx_http_compile_complex_value_t ccv;

    ctx = ngx_pcalloc(cf->pool, sizeof(ngx_http_split_clients_ctx_t));
    if (ctx == ((void*)0)) {
        return NGX_CONF_ERROR;
    }

    value = cf->args->elts;

    ngx_memzero(&ccv, sizeof(ngx_http_compile_complex_value_t));

    ccv.cf = cf;
    ccv.value = &value[1];
    ccv.complex_value = &ctx->value;

    if (ngx_http_compile_complex_value(&ccv) != NGX_OK) {
        return NGX_CONF_ERROR;
    }

    name = value[2];

    if (name.data[0] != '$') {
        ngx_conf_log_error(NGX_LOG_EMERG, cf, 0,
                           "invalid variable name \"%V\"", &name);
        return NGX_CONF_ERROR;
    }

    name.len--;
    name.data++;

    var = ngx_http_add_variable(cf, &name, NGX_HTTP_VAR_CHANGEABLE);
    if (var == ((void*)0)) {
        return NGX_CONF_ERROR;
    }

    var->get_handler = ngx_http_split_clients_variable;
    var->data = (uintptr_t) ctx;

    if (ngx_array_init(&ctx->parts, cf->pool, 2,
                       sizeof(ngx_http_split_clients_part_t))
        != NGX_OK)
    {
        return NGX_CONF_ERROR;
    }

    save = *cf;
    cf->ctx = ctx;
    cf->handler = ngx_http_split_clients;
    cf->handler_conf = conf;

    rv = ngx_conf_parse(cf, ((void*)0));

    *cf = save;

    if (rv != NGX_CONF_OK) {
        return rv;
    }

    sum = 0;
    last = 0;
    part = ctx->parts.elts;

    for (i = 0; i < ctx->parts.nelts; i++) {
        sum = part[i].percent ? sum + part[i].percent : 10000;
        if (sum > 10000) {
            ngx_conf_log_error(NGX_LOG_EMERG, cf, 0,
                               "percent total is greater than 100%%");
            return NGX_CONF_ERROR;
        }

        if (part[i].percent) {
            last += part[i].percent * (uint64_t) 0xffffffff / 10000;
            part[i].percent = last;
        }
    }

    return rv;
}
